--- a/fylo-landing-page-with-two-column-layout-master/styles.css
+++ b/fylo-landing-page-with-two-column-layout-master/styles.css
@@ -1,473 +1,387 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap');
 
-:root{
-  --hover-blue: #6c9bff;
-  --very-dark-blue : #070439;
-  --desat-blue : #585889;
-  /* Accent */
-  --bright-blue : #3065f8;
-  --moderate-cyan : #3c9f8f;
-  --error : #EF4877;
+:root {
+	--hover-blue: #6c9bff;
+	--very-dark-blue: #070439;
+	--desat-blue: #585889;
+	/* Accent */
+	--bright-blue: #3065f8;
+	--moderate-cyan: #3c9f8f;
+	--error: #ef4877;
 
-  /* Neutral */
-  --light-grayish-blue: #f6f6fe;
-  --light-gray: #bfbfbf;
-  --para-gray : #615F7E;
+	/* Neutral */
+	--light-grayish-blue: #f6f6fe;
+	--light-gray: #bfbfbf;
+	--para-gray: #615f7e;
 }
 
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-img, picture, video, canvas, svg {
-  display: block;
-  max-width: 100%;
+img,
+picture,
+video,
+canvas,
+svg {
+	display: block;
+	max-width: 100%;
 }
 
-a{
-  text-decoration: none;
+a {
+	text-decoration: none;
 }
 
-ul{
-  list-style: none;
+ul {
+	list-style: none;
 }
 
-input, button, textarea, select {
-  font: inherit;
+input,
+button,
+textarea,
+select {
+	font: inherit;
 }
 /* Headings, Call-to-actions, Header Navigation */
 .submit-btn,
-.nav{
-  font-family: 'Raleway', sans-serif;
+.nav {
+	font-family: 'Raleway', sans-serif;
 }
 
-html{
-  font-size: 16px;
-  font-family: 'Open Sans', sans-serif;
+html {
+	font-size: 16px;
+	font-family: 'Open Sans', sans-serif;
 }
 /* Nav */
 
-.nav{
-  margin: 1.5rem 1.5rem 6.125rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: var(--very-dark-blue);
+.nav {
+	margin: 1.5rem 1.5rem 6.125rem;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	color: var(--very-dark-blue);
 }
 
 /* Main logo */
-.nav__logo{
-  width: 5rem;
+.nav__logo {
+	width: 5rem;
 }
 
-.nav__list{
-  display: flex;
-  gap: 1rem;
+.nav__list {
+	display: flex;
+	gap: 1rem;
 }
 
-.nav__list li:hover{
-  border-bottom: 1px solid var(--very-dark-blue);
-  cursor: pointer;
+.nav__list li:hover {
+	border-bottom: 1px solid var(--very-dark-blue);
+	cursor: pointer;
 }
 
-.header{
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  margin: 0 1.75rem 9.125rem;
-  text-align: center;
-  gap: 2.5rem;
-  color: var(--very-dark-blue);
+/* -------------- Main container -------------------*/
+header,
+main {
+	color: var(--very-dark-blue);
+	text-align: center;
 }
 
-.header__text{
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
+.top-header {
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
+	align-items: center;
+	padding: 0 1.6875rem;
 }
 
-.header__text p{
-  line-height: 1.3125rem;
-  font-size: 0.875rem;
-  padding: 0 0.5rem;
+.top-header p {
+	font-size: 0.875rem;
+	padding: 0 0.875rem;
 }
 
-.top_form{
-  margin-top: 0.5rem;
-  padding: 0 0.625rem;
-  display: flex;
-  flex-direction: column;
-  gap:1rem;
+.top-image img {
+	width: 19rem;
+	height: 14.0625rem;
 }
 
-.top_form label{
-  position: relative;
+.form {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 1rem;
 }
 
-.top_form input, .top_form button{
-  border-radius: 0.25rem;
-  height: 2.5rem;
-  width: 100%;
+.form label {
+	position: relative;
 }
 
-.top_form input{
-  padding: 0 1.25rem;
-  border: 1px solid var(--very-dark-blue);
+.upper-form input,
+.upper-form button {
+	width: 19rem;
+	height: 2.5rem;
+	border-radius: 0.25rem;
 }
 
-.top_form input:focus{
-  outline: none;
+.upper-form input {
+	border: 1px solid var(--very-dark-blue);
+	padding: 0 1.25rem;
 }
 
-.error-msg{
-  font-weight: 700;
-  color: var(--error);
-  font-size: 0.8rem;
-  position: absolute;
-  left: 0.25rem;
-  bottom: -1.0rem;
+.form input:focus {
+	outline: 0;
 }
 
-.hidden{
-  display: none;
+.form button {
+	font-weight: bold;
+	font-size: 0.875rem;
 }
 
-.form ::placeholder{
-  color: var(--light-gray);
+.form input::placeholder {
+	color: #c2c2c2;
+	font-size: 0.75rem;
 }
 
-.form button{
-  border: none;
-  color: #fff;
-  font-weight: 700;
-  background-color: var(--bright-blue);
-  border: 1px solid var(--bright-blue);
+.form button {
+	background-color: var(--bright-blue);
+	color: #fff;
+	border: none;
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
 }
 
-.form button:hover{
-  border: 1px solid #6c9bff;
-  background-color: #6c9bff;
-  cursor: pointer;
+.form button:hover {
+	cursor: pointer;
+	opacity: 60%;
 }
 
-.top_form button{
-  box-shadow: 0 1px 4px rgba(0,0,0,0.5);
+/* ----------------------- Error Message ------------------ */
+.error-msg {
+	color: var(--error);
+	font-size: 0.75rem;
+	position: absolute;
+	bottom: -1rem;
+	left: 0;
 }
 
-/* Error state */
-
-.top__label.error .error-msg{
-  display: block;
+.hidden {
+	display: none;
 }
 
-/* Second box */
+/* ------------------ Second Block ----------------------- */
 
-
-.mob-curve{
-  width: 100%;
+main {
+	margin-top: 5.625rem;
+	position: relative;
+	background-color: var(--light-grayish-blue);
+	padding-bottom: 5.125rem;
 }
 
-.desktop-curve{
-  display: none;
+.curve {
+	position: absolute;
+	top: -3.3rem;
 }
 
-.box__logo img{
-  margin: auto;
-  width: 20rem;
-  height: 15rem;
+.desktop-curve {
+	display: none;
 }
 
-.box{
-  padding-bottom: 5.125rem;
-  background-color: #F8F8FE;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  gap: 5.625rem;
-  color: var(--very-dark-blue);
+.information {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 1.45rem;
+	padding: 0 1.6875rem;
 }
 
-.box__text{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1.5rem;
+.block-image {
+	width: 20rem;
+	height: 15rem;
+	margin-bottom: 2.5rem;
 }
 
-.gray-para{
-  font-size: 0.875rem;
-  padding: 0 1.25rem 0 2rem;
-  line-height: 1.315rem;
-  color: var(--para-gray);
+.information__para {
+	font-size: 0.875rem;
+	color: var(--para-gray);
+	line-height: 1.26rem;
 }
 
-/* Link */
-
-.box__link{
-  padding-bottom: 0.25rem;
-  border-bottom: 1px solid var(--moderate-cyan);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.25rem;
+.information__link {
+	color: var(--moderate-cyan);
+	padding-bottom: 0.25rem;
+	border-bottom: 1px solid var(--moderate-cyan);
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	gap: 0.25rem;
+	font-size: 0.75rem;
+	width: 8.125rem;
 }
 
-.box__link:hover{
-  border-bottom: none;
+.information__link img {
+	width: 0.9rem;
+	height: 0.9rem;
 }
 
-.box__link:hover .arrow-img{
-  opacity: 0.5;
+.information__link:hover {
+	cursor: pointer;
+	opacity: 60%;
 }
 
-.box__link:hover a{
-  cursor: pointer;
-  color: #71dfcc;
+.information__user {
+	width: 17.5rem;
+	height: 11.25rem;
+	padding: 1.25rem 0.9rem 1.25rem 1.5rem;
+	text-align: start;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	line-height: 1.05rem;
+	border-radius: 0.35rem;
+	box-shadow: 0 0 8px 4px rgba(56, 56, 56, 0.04);
+	background-color: #fff;
 }
 
-.box__link a{
-  font-size: 0.95rem;
-  color: var(--moderate-cyan);
+.information__user p {
+	font-size: 0.68rem;
 }
 
-/* User review */
-
-.box__user-review{
-  margin-top: 1.5rem;
-  border-radius: 0.25rem;
-  padding: 0.875rem 0.8125rem 0.875rem 1.625rem;
-  width: 17.5rem;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 0.85rem;
-  text-align: start;
-  color: var(--very-dark-blue);
-  box-shadow: 0 0 8px 4px rgba(0,0,0,0.05);
+.quote img {
+	width: 1rem;
+	height: 1rem;
 }
 
-.box__user-review p{
-  font-size: 0.75rem;
-  line-height: 1.125rem;
+.user-info {
+	display: flex;
+	align-items: center;
+	gap: 0.5rem;
+	text-align: start;
 }
 
-.user-review{
-  display: flex;
-  gap: 0.5rem;
-  align-items: center;
+.user-image img {
+	width: 2rem;
+	height: 2rem;
+	border-radius: 50%;
 }
 
-.user-image{
-  width: 2.2rem;
+.bold {
+	font-size: 0.65rem;
+	font-weight: 700;
+}
+.designation {
+	font-size: 0.5rem;
+	font-weight: 400;
+	display: block;
 }
 
-.user-image img{
-  border-radius: 50%;
+/* ------------------- Early Access ------------------- */
+.early-access {
+	background-color: var(--desat-blue);
+	color: #fff;
+	text-align: center;
+	padding: 3rem;
 }
 
-.bold{
-  font-size: 0.7rem;
-  font-weight: 700;
+.early-access .container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 1rem;
 }
 
-.designation{
-  display: block;
-  font-weight: 400;
-  font-size: 0.55rem;
+.early-access p {
+	font-size: 0.875rem;
+	line-height: 1.26rem;
 }
 
-/* Light purple container */
-
-.early-access{
-  padding: 3.375rem 3rem 3.5rem;
-  background-color: var(--desat-blue);
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  color: #fff;
-  gap: 1rem;
-  text-align: center;
+.lower-form input,
+.lower-form button {
+	border-radius: 0.2rem;
+	font-size: 0.625rem;
+	border: none;
+	width: 15rem;
+	height: 2rem;
 }
 
-.early-access p{
-  font-size: 0.875rem;
-  line-height: 1.5rem;
+.lower-form input {
+	padding: 0 0.5rem;
 }
 
-.bottom__form{
-  width: 15rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1.1rem;
+/* ------------------------- Footer -------------------------- */
+
+footer {
+	padding: 4rem 2.4375rem 2.625rem;
+	background-color: var(--very-dark-blue);
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
 }
 
-.bottom__form input,.bottom__form button{
-  width: 100%;
-  height: 2rem;
-  border-radius: 0.30rem;
-  font-size: 0.75rem;
+.footer-logo img {
+	width: 6.5625rem;
+	height: 2rem;
+	filter: brightness(0)invert(1);
 }
 
-.bottom__form input{
-  padding: 0 0.5rem;
-  border: 1px solid var(--para-gray);
+.grid-container {
+	color: #fff;
+	display: grid;
+	gap: 1.5rem;
 }
 
-.bottom__form input:focus{
-  outline: none;
+.contact-box {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
 }
 
-.bottom__label{
-  position: relative;
-}
-.bottom__label .error-msg{
-  bottom: -1rem;
-}
-
-
-/* Footer */
-
-footer{
-  background-color: var(--very-dark-blue);
-  color: #fff;
-  padding: 4rem 2.4375rem 2rem;
-  font-size: 1rem;
+.footer__flex-row {
+	display: flex;
+	align-items: center;
+	gap: 1rem;
+	font-size: 1rem;
 }
 
-footer,.footer__grid,.self-box{
-  display: flex;
-  flex-direction: column;
-  gap: 2.5rem;
+.footer__flex-row img {
+	width: 1rem;
+	height: 1rem;
 }
 
-.self-box{
-  gap: 1.125rem;
+/* More info */
+
+.more-info {
+	display: flex;
+	flex-direction: column;
+	gap: 0.75rem;
 }
 
-.logo-invert{
-  width: 6.5625rem;
-  filter: brightness(0)invert(1);
+.more-info a {
+	color: #fff;
+	font-size: 0.875rem;
 }
 
-.footer__flex-row{
-  display: flex;
-  align-items: center;
-  gap: 1rem;
+.more-info a:hover {
+	color: var(--hover-blue);
 }
 
-.footer__flex-row img{
-  width: 1.2rem;
-  height: 1.2rem;
+/* Social icons */
+
+.social-icons {
+	display: flex;
+	justify-content: center;
+	gap: 0.75rem;
 }
 
-.more-info a{
-  color: #fff;
+.social-icon {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	color: #fff;
+	width: 2rem;
+	height: 2rem;
+	border: 1px solid #fff;
+	border-radius: 50%;
 }
 
-.more-info a:hover{
-  color: var(--hover-blue);
-}
-
-.social-icons{
-  display: flex;
-  justify-content: center;
-  gap: 0.75rem;
-}
-
-.social-icon{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #fff;
-  width: 2rem;
-  height: 2rem;
-  border: 1px solid #fff;
-  border-radius: 50%;
-}
-
-.social-icon:hover{
-  border-color: var(--hover-blue);
-  color: var(--hover-blue);
-}
-
-/* Attribution */
-.attribution{
-  color: #fff;
-  background-color: var(--very-dark-blue);
-  font-size: 0.8rem;
-  text-align: center;
-}
-
-.attribution a{
-  color: var(--bright-blue);
-}
-
-.attribution a:hover{
-  color: var(--error);
-}
-
-
-@media(min-width: 26.875rem) and (max-width: 48rem){
-  .nav__logo{
-    width: 8rem;
-  }
-
-  .header__logo{
-    width: 40rem;
-  }
-
-  .header__text{
-    width: 30rem;
-  }
-
-  .top_form{
-    flex-direction: row;
-    gap: 0.75rem;
-  }
-
-  .top_form label{
-    width: 65%;
-  }
-
-  .top_form button{
-    width: 35%;
-  }
-
-  .box__logo img{
-    width: 30rem;
-    height: 22.625rem;
-  }
-
-  .box__text h4{
-    font-size: 1.5rem;
-  }
-
-  .gray-para{
-    padding: 0 6rem;
-  }
-
-  .box__link img{
-    width: 1.25rem;
-    height: 1.25rem;
-  }
-
-  .box__link a{
-    font-size: 1rem;
-  }
-
-  .box__user-review{
-    width: 22.5rem;
-  }
-
-  .box__user-review p{
-    font-size: 0.85rem;
-    line-height: 1.6;
-  }
-
-  .designation{
-    font-size: 0.65rem;
-  }
+.social-icon:hover {
+	border-color: var(--hover-blue);
+	color: var(--hover-blue);
 }
