--- a/fylo-landing-page-with-two-column-layout-master/styles.css
+++ b/fylo-landing-page-with-two-column-layout-master/styles.css
@@ -199,7 +199,7 @@ label.success input {
 /* Lower box */
 .lower-box {
 	gap: 6rem;
-	background-color: var(--light-grayish-blue);
+	background-color: #b4def2;
 	position: relative;
 	margin-top: 11rem;
 	padding: 0 1.5rem 5.5rem;
